generate/testdata/errors/BindingWithIncorrectSelection.go
package errors

const _ = `# @genqlient
query GetPokemonWrongFields {
  pokemon { species }
}
`
